--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "e2e": "playwright test"
   },
   "dependencies": {
+    "antd": "^5.8.6",
     "electron-updater": "^6.1.1"
   },
   "devDependencies": {
