--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "e2e": "playwright test"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "antd": "^5.8.6",
-    "electron-updater": "^6.1.1"
+    "electron-updater": "^6.1.1",
+    "exceljs": "^4.3.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.37.1",
